# MLOps-demo

./: # Databricks notebook source.txt  .gitignore  EXECUTION_ORDER.md  MLOps_AWS_Databricks_Velmurugan_Poongavanam_v2 (1).docx  Makefile  README.md  databricks.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: cd.yml  ci.yml
databricks/asset_bundles/: databricks.yml
databricks/clusters/: serving_cluster.json  training_cluster.json
databricks/policies/: ml_cluster_policy.json
infra/: main.tf
infra/environments/dev/: terraform.tfvars
infra/environments/prod/: terraform.tfvars
infra/environments/staging/: terraform.tfvars
infra/modules/cost_controls/: main.tf
infra/modules/iam_roles/: main.tf
infra/modules/s3_buckets/: main.tf
pipelines/feature_engineering/: compute_features.py  feature_store_writer.py
pipelines/inference/: batch_inference.py  realtime_handler.py
pipelines/ingestion/: autoloader_config.py  raw_ingest.py
pipelines/maintenance/: optimize_tables.py
pipelines/monitoring/: drift_detection.py  performance_report.py
pipelines/training/: hyperopt_search.py  train.py  validate_model.py
pipelines/transformation/: clean_and_join.py  schema_enforcement.py
src/config/: base_config.py
src/utils/: delta_utils.py  mlflow_utils.py  spark_utils.py
tests/data_quality/: test_schema.py
tests/unit/: test_features.py  test_transformations.py
