[build-system]
requires      = ["setuptools>=67"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "mlops-demo"
version         = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyspark==3.5.0",
    "delta-spark==3.1.0",
    "mlflow>=2.14",
    "databricks-sdk>=0.24",
    "databricks-feature-store>=0.17",
    "hyperopt>=0.2.7",
    "scikit-learn>=1.4",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.8",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=3.6",
]

[project.scripts]
bronze-ingest    = "pipelines.ingestion.raw_ingest:main"
silver-transform = "pipelines.transformation.clean_and_join:main"
train-model      = "pipelines.training.train:main"
validate-model   = "pipelines.training.validate_model:main"

[tool.ruff]
line-length    = 110
target-version = "py311"
select         = ["E","F","I","UP","B","SIM","TID"]
ignore         = ["E501"]

[tool.mypy]
python_version        = "3.11"
ignore_missing_imports = true
strict                 = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short -q --cov=src --cov=pipelines --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "notebooks/*"]
